k8s/base/product/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: biddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: product
          image: ghcr.io/prgrms-be-adv-devcourse/frontal-product:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
