k8s/base/product/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  selector:
    app: product
  ports:
    - name: http
      port: 8082
      targetPort: 8082
